# ctle

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  bootstrap.sh  buildall.bat  buildall.sh  ctle.code-workspace  ctle.natvis  ctle_tests.sln  generate.py  idx_vector.h  mytests.cpp  optional_idx_vector.h  optional_value.h  optional_vector.h  testall.bat  testall.sh  thread_safe_map.h  vcpkg-configuration.json  vcpkg.json
.github/workflows/: check_version_updated.yml  compile_and_test.yml
cmake/: compiler_warnings.cmake  toolchain_settings.cmake
code_gen/: code_generator_helpers.py  enum_generator.py  generate.py  header_checker.py  macros_generator.py  property_generator.py  status.py  status_generator.py  types_generator.py
code_gen/ctlepy/: __init__.py  code_embed.py  file_checker.py  formatted_output.py
ctle/: bimap.h  bitmap_font.h  ctle.h  data_destination.h  data_source.h  data_stream.h  digest.h  endianness.h  file_funcs.h  hash.h  hasher.h  idx_vector.h  log.h  multithread_pool.h  optional_idx_vector.h  optional_value.h  optional_vector.h  read_stream.h  readers_writer_lock.h  sockets.h  status.h  status_error.h  status_return.h  string_funcs.h  thread_safe_map.h  util.h  uuid.h  write_stream.h
ctle_code_gen/: __init__.py  enum_generator.py  formatted_output.py  macros_generator.py  property_generator.py  status_generator.py  types_generator.py
docs/: base_types.md  bimap.md  data_source.md  hash.md  hasher.md  log.md  status_return.md  string_funcs.md  thread_safe_map.md  util.md  uuid.md  write_stream.md
include/ctle/: _macros.inl  _undef_macros.inl  base_types.h  bimap.h  ctle.h  digest.h  file_funcs.h  fwd.h  hasher.h  idx_vector.h  log.h  log_system.h  ntup.h  optional_idx_vector.h  optional_value.h  optional_vector.h  os.inl  process.h  prop.h  read_stream.h  semaphore.h  sockets.h  status.h  status_return.h  string_funcs.h  util.h  uuid.h
perf_tests/: CMakeLists.txt  perf_tests.cpp  perf_tests.vcxproj  perf_tests.vcxproj.filters
unit_tests/: BasicTests.cpp  CMakeLists.txt  basic_tests.cpp  pch.cpp  pch.h  test_bimap.cpp  test_bitmap_font.cpp  test_data_destination.cpp  test_data_source.cpp  test_data_stream.cpp  test_digest.cpp  test_endianness.cpp  test_file_funcs.cpp  test_hash.cpp  test_hasher.cpp  test_idx_vector.cpp  test_log.cpp  test_log_system.cpp  test_macros.cpp  test_multithread_pool.cpp  test_optional_idx_vector.cpp  test_optional_value.cpp  test_optional_vector.cpp  test_process.cpp  test_prop.cpp  test_property.cpp  test_read_stream.cpp  test_readers_writer_lock.cpp  test_semaphore.cpp  test_sockets.cpp  test_status.cpp  test_status_return.cpp  test_string_funcs.cpp  test_thread_safe_map.cpp  test_types.cpp  test_util.cpp  test_uuid.cpp  unit_tests.cpp  unit_tests.h  unit_tests.vcxproj  (+4 more)
unit_tests/ctlepy_tests/: test_ctlepy.py
